CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(UNIT_NAME MyBS)

PROJECT(${UNIT_NAME} CXX)

get_filename_component( MYBS_MAIN_DIRECTORY ../ REALPATH )

IF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
	INCLUDE(${MYBS_MAIN_DIRECTORY}/.BuildFiles/VCXProjFormatter.cmake)
ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")

IF (NOT ${CMAKE_SYSTEM_NAME} MATCHES "Windows")
    ADD_DEFINITIONS(-std=c++1y)
	ADD_DEFINITIONS(-DBOOST_LOG_DYN_LINK)
ELSE(NOT ${CMAKE_SYSTEM_NAME} MATCHES "Windows")
    ADD_DEFINITIONS(-D_WIN32_WINNT=0x0600)
	ADD_DEFINITIONS(-D_XKEYCHECK_H)
	ADD_DEFINITIONS(/MP)
ENDIF (NOT ${CMAKE_SYSTEM_NAME} MATCHES "Windows")

SET(BOOST_INCLUDEDIR $ENV{BOOST_INCLUDE})

#SET(Boost_DEBUG ON)

SET( Boost_USE_STATIC_LIBS ON )

FIND_PACKAGE(Boost)

MESSAGE("Boost_INCLUDE_DIRS: ${Boost_INCLUDE_DIRS}")
MESSAGE("Boost_LIBRARY_DIRS: ${Boost_LIBRARY_DIRS}")
MESSAGE("MYBS_MAIN_DIRECTORY : ${MYBS_MAIN_DIRECTORY}")
MESSAGE("PROJECT_SOURCE_DIR : ${PROJECT_SOURCE_DIR}")

SET(THREADDENEME ${MYBS_MAIN_DIRECTORY}/bin)

FILE(TO_CMAKE_PATH ${THREADDENEME} THREADDENEME_FIXED )

SET(CMAKE_INSTALL_PREFIX ${THREADDENEME_FIXED}/${UNIT_NAME})

FILE(GLOB_RECURSE SOURCE
        ${PROJECT_SOURCE_DIR}/*.h
        ${PROJECT_SOURCE_DIR}/*.cpp        
)

FILE(GLOB_RECURSE REMOVE_SOURCE 
	${PROJECT_SOURCE_DIR}/build/*.cpp
	${PROJECT_SOURCE_DIR}/build/*.h
)

IF(REMOVE_SOURCE)
	list(REMOVE_ITEM SOURCE ${REMOVE_SOURCE})
ENDIF(REMOVE_SOURCE)

FILE(GLOB MAIN_CPP ${PROJECT_SOURCE_DIR}/Main.cpp)

#MESSAGE("#######################################################################")
#MESSAGE(" # Source List :")
#FOREACH(CPPFILE ${SOURCE})
#MESSAGE("${CPPFILE}")
#ENDFOREACH(CPPFILE)
#MESSAGE("##################################################################")

IF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
	GroupSources(${MYBS_MAIN_DIRECTORY} src)
ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")

INCLUDE_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}
    ${Boost_INCLUDE_DIRS}
)

LINK_DIRECTORIES(
    ${Boost_LIBRARY_DIRS}
)
                  
ADD_LIBRARY(${UNIT_NAME}s STATIC ${SOURCE})              

ADD_EXECUTABLE(${UNIT_NAME} ${MAIN_CPP})

ADD_DEPENDENCIES(${UNIT_NAME} ${UNIT_NAME}s)

SET_TARGET_PROPERTIES( ${UNIT_NAME}s PROPERTIES OUTPUT_NAME "${UNIT_NAME}s${BUILD_TYPE_SUFFIX}" )

SET_TARGET_PROPERTIES( ${UNIT_NAME} PROPERTIES OUTPUT_NAME "${UNIT_NAME}${BUILD_TYPE_SUFFIX}" )

IF (NOT ${CMAKE_SYSTEM_NAME} MATCHES "Windows")
    SET (NSL nsl)
    SET (PTHREAD pthread)
ENDIF (NOT ${CMAKE_SYSTEM_NAME} MATCHES "Windows")

IF ( ${CMAKE_SYSTEM_NAME} MATCHES "Windows")
    SET (BOOST_PREFIX lib)
    SET (BOOST_SUFFIX ${_boost_COMPILER}${_boost_MULTITHREADED}${_boost_DEBUG_ABI_TAG}-${Boost_LIB_VERSION})
ENDIF ( ${CMAKE_SYSTEM_NAME} MATCHES "Windows")

SET ( LINK_LIBRARIES_VAR 
    ${BOOST_PREFIX}boost_thread${BOOST_SUFFIX}
    ${BOOST_PREFIX}boost_system${BOOST_SUFFIX}
    ${BOOST_PREFIX}boost_filesystem${BOOST_SUFFIX}
    ${BOOST_PREFIX}boost_date_time${BOOST_SUFFIX}
    ${BOOST_PREFIX}boost_log_setup${BOOST_SUFFIX}
    ${BOOST_PREFIX}boost_log${BOOST_SUFFIX}
    ${BOOST_PREFIX}boost_iostreams${BOOST_SUFFIX}
    ${BOOST_PREFIX}boost_program_options${BOOST_SUFFIX}
    ${NSL}
    ${PTHREAD}
)

TARGET_LINK_LIBRARIES(
        ${UNIT_NAME}
        ${UNIT_NAME}s
        ${LINK_LIBRARIES_VAR}
)

MESSAGE("CMAKE_INSTALL_PREFIX : ${CMAKE_INSTALL_PREFIX}")

ADD_CUSTOM_TARGET(uninstall rm -rf ${CMAKE_INSTALL_PREFIX})

IF (NOT ${CMAKE_SYSTEM_NAME} MATCHES "Windows")
    ADD_CUSTOM_COMMAND(TARGET ${UNIT_NAME} POST_BUILD
        COMMAND make uninstall install
        WORKING_DIRECTORY ${PROJECT_BUILD_DIR})
ENDIF (NOT ${CMAKE_SYSTEM_NAME} MATCHES "Windows")
                    
INSTALL(TARGETS ${UNIT_NAME}s ARCHIVE DESTINATION lib)

INSTALL(TARGETS ${UNIT_NAME} DESTINATION bin)

MESSAGE("CMAKE_CURRENT_BINARY_DIR : ${CMAKE_CURRENT_BINARY_DIR}")
MESSAGE("CMAKE_BUILD_TYPE : ${CMAKE_BUILD_TYPE}")
MESSAGE("CMAKE_INSTALL_PREFIX : ${CMAKE_INSTALL_PREFIX}")

#Installing *.pdb files
#Installing *.pdb files
IF (CMAKE_SYSTEM_NAME STREQUAL Windows)
    INSTALL (
        CODE "FILE (GLOB _pdbFileToBeCopied \"${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}/*.pdb\" )"    
    CODE "FILE (INSTALL \${_pdbFileToBeCopied} DESTINATION \"${CMAKE_INSTALL_PREFIX}/lib\" )"
    )
ENDIF (CMAKE_SYSTEM_NAME STREQUAL Windows)
